<?xml version="1.0"?>
<package format="2">
  <name>ustbot_bringup</name>
  <version>0.0.1</version>
  <description>
    roslaunch scripts for starting ustbot
  </description>
  <license>Apache 2.0</license>
  <maintainer email="o@ust.com">O</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ustbot_description</exec_depend>
  <exec_depend>mobilebot_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  -->
</package>
