<?xml version="1.0"?>
<package format="2">
  <name>mobilebot_navigation</name>
  <version>0.0.1</version>
  <description>
    The mobilebot_navigation provides roslaunch scripts for starting the navigation for ustbot or turtlebot robot models (burger).
  </description>
  <license>Apache 2.0</license>
  <maintainer email="o@ust.com">O</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>mpc_local_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>ustbot_bringup</exec_depend>
</package>
