<?xml version="1.0"?>
<package format="2">
  <name>mobilebot_slam</name>
  <version>0.0.1</version>
  <description>
    Modified version of turtlebot3_slam package, provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <maintainer email="o@ust.com">O</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>ustbot_bringup</exec_depend> 
</package>
