<?xml version="1.0"?>
<package format="2">
  <name>mobilebot_teleop</name>
  <version>0.0.1</version>
  <description>
    Modified version of teleoperation using keyboard for TurtleBot3, also for Ustbot.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <maintainer email="o@ust.com">O</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
