<?xml version="1.0"?>
<package format="2">
  <name>ustbot_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the USTBOT for simulation and visualization
  </description>
  <maintainer email="o@ust.hk">k</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend> 
</package>
